# idle_flow

./: .gitignore  Cargo.toml  rustfmt.toml
.cargo/: config.toml
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/app_controller/: Cargo.toml
crates/app_controller/src/: lib.rs
crates/idler_utils/: Cargo.toml
crates/idler_utils/src/: input_utils.rs  lib.rs  registry.rs  single_instance.rs
crates/mitigations/: Cargo.toml
crates/mitigations/src/: lib.rs  thread.rs
crates/tray/: Cargo.toml
crates/tray/src/: lib.rs
flow/: Cargo.toml  build.rs
flow/src/: app.rs  main.rs  tray.rs
resources/: manifest.xml
