[workspace]
members = [
    "flow",
    "crates/idler_utils",
    "crates/mitigations",
    "crates/app_controller",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.88"
authors = ["IF"]
version = "0.1.1"

[workspace.dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
tray-icon = "0.21.0"
image = "0.25.6"
winit = "0.30.11"
tauri-winres = "0.3.1"
tracing = "0.1.41"
windows = "0.61.3"
tracing-subscriber = "0.3.19"
rand = "0.9.2"
crossbeam = "0.8.4"

app_controller = { path = "crates/app_controller" }
idler_utils = { path = "crates/idler_utils" }
mitigations = { path = "crates/mitigations" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
debug = false

[profile.dev]
panic = "abort"
debug = 2

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
