[workspace]
members = [
    "crates/app",
    "crates/app_controller",
    "crates/idler_utils",
    "crates/mitigations",
    "crates/tray",
    "flow",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.88"
authors = ["IF"]
version = "0.1.2"

[workspace.dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
crossbeam = "0.8.4"
image = "0.25.6"
rand = "0.9.2"
tauri-winres = "0.3.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tray-icon = "0.21.1"
windows = "0.61.3"
winit = "0.30.12"

app = { path = "crates/app" }
app_controller = { path = "crates/app_controller" }
idler_utils = { path = "crates/idler_utils" }
mitigations = { path = "crates/mitigations" }
tray = { path = "crates/tray" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
debug = false

[profile.dev]
panic = "abort"
debug = 2
