[workspace]
members = [
    "crates/app",
    "crates/app_controller",
    "crates/idler_utils",
    "crates/mitigations",
    "crates/tray",
    "flow",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.89"
authors = ["IF"]
version = "0.1.4"
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[workspace.dependencies]
anyhow = { version = "1.0.99", default-features = false }
chrono = { version = "0.4.42", default-features = false }
crossbeam = { version = "0.8.4", default-features = false }
image = { version = "0.25.8", default-features = false }
rand = { version = "0.9.2", default-features = false }
tauri-winres = { version = "0.3.3", default-features = false }
tracing = { version = "0.1.41", default-features = false, features = [
    "release_max_level_off",
] }
tracing-subscriber = { version = "0.3.20", default-features = false }
tray-icon = { version = "0.21.1", default-features = false }
win_mitigations = { version = "0.1.4", default-features = false }
windows = { version = "0.62.0", default-features = false }
winit = { version = "0.30.12", default-features = false }

app = { path = "crates/app" }
app_controller = { path = "crates/app_controller" }
idler_utils = { path = "crates/idler_utils" }
mitigations = { path = "crates/mitigations" }
tray = { path = "crates/tray" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"

[workspace.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
debug = false

[profile.dev]
panic = "abort"
debug = 2
