[package]
name = "flow"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[package.metadata.tauri-winres]
LegalCopyright = "IF©2025"
OriginalFilename = "flow.exe"

[package.metadata.cargo-machete]
ignored = ["tauri-winres"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies]
idler_utils = { workspace = true }
mitigations = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tray-icon = { workspace = true }
winit = { workspace = true }

app = { workspace = true }
tray = { workspace = true }

[build-dependencies]
tauri-winres = { workspace = true }

[lints]
workspace = true
