[package]
name = "flow"
build = "build.rs"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
version.workspace = true

[package.metadata.tauri-winres]
LegalCopyright = "IF©2025"
OriginalFilename = "flow.exe"

[package.metadata.cargo-machete]
ignored = ["tauri-winres"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[target.'cfg(windows)'.dependencies]
app = { workspace = true }
idler_utils = { workspace = true }
mitigations = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "ansi",
    "fmt",
    "std",
] }
tray = { workspace = true }
tray-icon = { workspace = true }
winit = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
tauri-winres = { workspace = true, default-features = false }

[lints]
workspace = true
