[package]
name = "app_controller"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
crossbeam = { workspace = true }
idler_utils = { workspace = true }
mitigations = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
