[package]
name = "app_controller"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
tray-icon = { workspace = true }
winit = { workspace = true }

mitigations = { workspace = true }
tray = { workspace = true }

[lints]
workspace = true
