[package]
name = "app_controller"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[target.'cfg(windows)'.dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
crossbeam = { workspace = true }

mitigations = { workspace = true }
tracing = { workspace = true }
tray = { workspace = true }
tray-icon = { workspace = true }
winit = { workspace = true }

[lints]
workspace = true
