[package]
name = "idler_utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[target.'cfg(windows)'.dependencies]
anyhow = { workspace = true }
crossbeam = { workspace = true, features = ["std"] }
rand = { workspace = true, features = ["thread_rng"] }
tracing = { workspace = true }
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_System_Power",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_SystemInformation",
] }

mitigations = { workspace = true }

[lints]
workspace = true
