[package]
name = "mitigations"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies]
tracing = { workspace = true }
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_System_SystemServices",
  "Wdk_System_Threading",
] }

[lints]
workspace = true
