[package]
name = "mitigations"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
win_mitigations = { workspace = true }
windows = { workspace = true, features = [
  "Win32_System_Threading",
  "Wdk_System_Threading",
] }

[lints]
workspace = true
