[package]
name = "mitigations"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[target.'cfg(windows)'.dependencies]
anyhow = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
win_mitigations = { workspace = true }
windows = { workspace = true, features = [
  "Win32_System_Threading",
  "Wdk_System_Threading",
  "Win32_Foundation",
  "Win32_System_Memory",
  "Win32_Security",
  "Win32_System_Environment",
  "Win32_System_ErrorReporting",
  "Win32_System_Console"
] }

[lints]
workspace = true
