[package]
name = "tray"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
version.workspace = true

[dependencies]
chrono = { workspace = true, features = ["std"] }
image = { workspace = true, features = ["png"] }
tracing = { workspace = true }
tray-icon = { workspace = true }

[lints]
workspace = true
